# example-rust-todo-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 001_initial.sql
src/: database.rs  handlers.rs  main.rs  models.rs
