[package]
name = "example-rust-todo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["trace"] }
serde = { version = "1.0.217", features = ["derive"] }
